# canopus

./: .deepsource.toml  .dockerignore  .gitignore  .rumdl.toml  Cargo.toml  Dockerfile  README.md  committed.toml  deny.toml
.cargo/: config.toml
.github/: CODEOWNERS  canopus.toml  renovate.json
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  feature-request.yml
.github/actions/setup-rust/: action.yaml
.github/workflows/: cd.yml  ci.yml  ossf-scorecard.yml
crates/canopus/: Cargo.toml
crates/canopus/src/: canopus.rs  cli.rs  core.rs  features.rs  infra.rs  main.rs
crates/canopus/src/canopus/: repairing.rs  validation.rs
crates/canopus/src/cli/: arguments.rs
crates/canopus/src/core/: errors.rs  models.rs
crates/canopus/src/core/models/: codeowners.rs  config.rs  handles.rs
crates/canopus/src/features/: filesystem.rs  github.rs  validation.rs
crates/canopus/src/infra/: cli.rs  github.rs  paths.rs
crates/canopus/tests/: component.rs  integration.rs  validation.rs
crates/codeowners-tree-sitter/: Cargo.toml  grammar.js  tree-sitter.json
crates/codeowners-tree-sitter/bindings/rust/: build.rs  lib.rs
crates/codeowners-tree-sitter/src/: grammar.json  node-types.json  parser.c
crates/xtasks/: Cargo.toml
crates/xtasks/src/: artifacts.rs  sources.rs  utils.rs
docs/: changelog.md  contributing.md  development.md  installing.md  readme.md  releasing.md  using.md  website.json
