[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.1"
edition = "2024"
rust-version = "1.90.0"
authors = ["ubiratan.f.soares@gmail.com"]
description = "A fast and pragmatic validator for Github Codeowners"
repository = "https://github.com/dotanuki-labs/canopus"
homepage = "https://github.com/dotanuki-labs/canopus"
documentation = "https://github.com/dotanuki-labs/canopus"
readme = "README.md"
license = "MIT"
categories = ["command-line-utilities"]

[workspace.dependencies]
canopus = { path = "crates/canopus" }
xtasks = { path = "crates/xtasks" }

anyhow = "=1.0.100"
assertor = "=0.0.4"
assert_cmd = "=2.0.17"
better-panic = "=0.3.0"
clap = "=4.5.49"
console = "0.16.1"
email_address = "=0.2.9"
env_logger = "=0.11.8"
futures = "=0.3.31"
globset = "=0.4.16"
human-panic = "=2.0.3"
hex = "=0.4.3"
http = "=1.3.1"
httpmock = "=0.8.1"
ignore = "=0.4.23"
indoc = "=2.0.6"
itertools = "=0.14.0"
lazy-regex = "3.4.1"
log = "=0.4.28"
octocrab = "=0.47.0"
predicates = "3.1.3"
sha2 = "=0.10.9"
serde = "1.0.219"
temp-dir = "=0.1.16"
tikv-jemallocator = "0.6.0"
tokio = { version = "=1.47.1"}
toml = "0.9.5"
walkdir = "=2.5.0"
xshell = "=0.2.7"

[profile.release]
strip = true
lto = true
codegen-units = 1
