# Copyright 2025 Dotanuki Labs
# SPDX-License-Identifier: MIT

[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.1"
edition = "2024"
rust-version = "1.94.0"
authors = ["ubiratan.f.soares@gmail.com"]
description = "A fast and pragmatic validator for Github Codeowners"
repository = "https://github.com/dotanuki-labs/canopus"
homepage = "https://github.com/dotanuki-labs/canopus"
documentation = "https://github.com/dotanuki-labs/canopus"
readme = "README.md"
license = "MIT"
categories = ["command-line-utilities"]

[workspace.dependencies]
anyhow = "=1.0.102"
assertor = "=0.0.4"
assert_cmd = "=2.2.0"
better-panic = "=0.3.0"
clap = "=4.6.0"
console = "0.16.1"
email_address = "=0.2.9"
env_logger = "=0.11.10"
futures = "=0.3.32"
globset = "=0.4.18"
human-panic = "=2.0.6"
hex = "=0.4.3"
http = "=1.4.0"
httpmock = "=0.8.3"
ignore = "=0.4.25"
indoc = "=2.0.7"
itertools = "=0.14.0"
lazy-regex = "3.4.1"
log = "=0.4.29"
octocrab = "=0.49.6"
predicates = "3.1.3"
sha2 = "=0.10.9"
serde = "1.0.219"
temp-dir = "=0.2.0"
tikv-jemallocator = "0.6.0"
tokio = { version = "=1.50.0"}
toml = "1.0.0"
walkdir = "=2.5.0"
xshell = "=0.2.7"

[workspace.lints.rust]
future_incompatible = { level = "deny", priority = -1 }
nonstandard_style = "deny"
rust_2018_idioms = "deny"
unsafe_code = "deny"
unused_lifetimes = "deny"
unused_macro_rules = "deny"
unused_qualifications = { level = "deny", priority = -1 }

[workspace.lints.clippy]
fn_params_excessive_bools = "deny"
todo = "deny"
unimplemented = "deny"
unneeded_field_pattern = "deny"
unnested_or_patterns = "deny"
zero_sized_map_values = "deny"

[profile.release]
strip = true
lto = true
codegen-units = 1
