[package]
name = "canopus"
description = "An opinionated way to kick-off CLI apps powered by Rust"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
better-panic.workspace = true
clap = { workspace = true, features = ["derive"] }
email_address.workspace = true
env_logger.workspace = true
futures.workspace = true
globset.workspace = true
ignore.workspace = true
itertools.workspace = true
human-panic.workspace = true
lazy-regex.workspace = true
log.workspace = true
octorust.workspace = true
tokio.workspace = true
rand = "0.9.2"

[dev-dependencies]
assert_cmd.workspace = true
assertor.workspace = true
indoc.workspace = true
httpmock.workspace = true
predicates.workspace = true
reqwest.workspace = true
reqwest-middleware.workspace = true
reqwest-retry.workspace = true
serde_json.workspace = true
temp-dir.workspace = true
