[package]
name = "canopus"
description.workspace = true
authors.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
better-panic.workspace = true
clap = { workspace = true, features = ["derive"] }
console.workspace = true
email_address.workspace = true
env_logger.workspace = true
futures.workspace = true
globset.workspace = true
ignore.workspace = true
itertools.workspace = true
http.workspace = true
human-panic.workspace = true
lazy-regex.workspace = true
log.workspace = true
octocrab.workspace = true
serde.workspace = true
tikv-jemallocator.workspace = true
tokio = { workspace = true, features = ["full"] }
toml.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
assertor.workspace = true
indoc.workspace = true
httpmock.workspace = true
predicates.workspace = true
temp-dir.workspace = true
