[package]
name = "codeowners-tree-sitter"
description = "Tree-sitter powered parser for a CodeOwners grammar"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
]

[lib]
path = "bindings/rust/lib.rs"
doctest = false

[dependencies]
tree-sitter.workspace = true
tree-sitter-language.workspace = true

[build-dependencies]
cc = "1.2.27"

[dev-dependencies]
indoc.workspace = true
assertor.workspace = true
